# scripts

./: README.md
FQ-U-GAT-IT/: ops.py  readme.md
algorithm_cpp_find/: 2-3树.cpp  B树_B+树.cpp  CMakeLists.txt  二分查找.cpp  二叉树查找.cpp  哈希查找.cpp  插值查找.cpp  斐波那契查找.cpp  红黑树.cpp  顺序查找.cpp
b站评论爬取/: B站评论爬虫.py  入海数据分析.ipynb
other_scripts/: 利用自带的缓存机制提高效率.py  动态二维码.py  句内去重.py  实现类似 defer 的延迟调用.py  流式读取数G超大文件.py  程序退出前执行代码.py
yanxishe__zhihu_text_summarization/: method_test_for_jiagu.py  method_test_textrank4zh.py
天猫数据获取以及分析/: 天猫数据分析.ipynb  天猫数据获取.py
微信聊天记录分析/: dbutils.py  main.py  string_utils.py
贪吃蛇/: snake.py
银行卡卡号识别/: detection_card_number.py
