cmake_minimum_required(VERSION 3.13)
project(algorithm_cpp_find)

set(CMAKE_CXX_STANDARD 20)

#add_executable(algorithm_cpp_find 顺序查找.cpp)
#add_executable(algorithm_cpp_find 二分查找.cpp)
#add_executable(algorithm_cpp_find 插值查找.cpp)
#add_executable(algorithm_cpp_find 斐波那契查找.cpp)
add_executable(algorithm_cpp_find 哈希查找.cpp)
#add_executable(algorithm_cpp_find 二叉树查找.cpp)
#add_executable(algorithm_cpp_find 2-3树.cpp)
#add_executable(algorithm_cpp_find 红黑树.cpp)
#add_executable(algorithm_cpp_find B树_B+树.cpp.cpp)